--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,1 +1,8 @@
-thanks
+<center>
+<h4>ご購入いただきありがとうございました。</h4>
+<p>注文詳細に関しましては
+<%= link_to "こちら",public_orders_path %>
+をご確認ください</p>
+<br>
+<p>引き続きご利用よろしくお願いします。</p>
+</center>
