--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,3 +1,6 @@
+
+<% breadcrumb :edit %>
+<%= breadcrumbs separator: " &rsaquo; " %>
 <h3>My page</h3>
     <div class="row">
         <div class="col-xs-1"></div>
