--- a/app/views/public/photos/show.html.erb
+++ b/app/views/public/photos/show.html.erb
@@ -1,3 +1,5 @@
+<%# breadcrumb :photo_show %>
+<%#= breadcrumbs separator: " &rsaquo; " %>
 <div class="row">
     <div class="col-xs-4 col-xs-offset-1">
         <div class="photo_wrapper">
