--- a/app/views/public/users/my_page.html.erb
+++ b/app/views/public/users/my_page.html.erb
@@ -1,3 +1,5 @@
+<% breadcrumb :mypage %>
+<%= breadcrumbs separator: " &rsaquo; " %>
 <h3>My page</h3>
     <div class="row">
         <div class="col-xs-1"></div>
@@ -70,7 +72,7 @@
                     </div>
                     <div class="mypage_detail__orders">
                         <div class="mypage_detail__orders_button">
-                            <%= link_to"Your Orders",root_path  %>
+                            <%= link_to"Your Orders",sold_public_orders_path()  %>
                         </div>
                         <div class="mypage_detail__orders_info">
                             <p>You got xxx orders</p>
