--- a/app/views/public/users/top.html.erb
+++ b/app/views/public/users/top.html.erb
@@ -1,3 +1,5 @@
+<% breadcrumb :root %>
+<%= breadcrumbs separator: " &rsaquo; " %>
 <% if user_signed_in? %>
     <div class="recommend_photographer">
         <div class="recommend_item_each">
