--- a/app/views/public/users/my_page.html.erb
+++ b/app/views/public/users/my_page.html.erb
@@ -72,7 +72,7 @@
                     </div>
                     <div class="mypage_detail__orders">
                         <div class="mypage_detail__orders_button">
-                            <%= link_to"Your Orders",sold_public_orders_path()  %>
+                            <%= link_to"Your Orders",sold_public_order_path(@user)  %>
                         </div>
                         <div class="mypage_detail__orders_info">
                             <p>You got xxx orders</p>
