--- a/app/views/public/likes/index.html.erb
+++ b/app/views/public/likes/index.html.erb
@@ -1,8 +1,11 @@
-<div class="contents_like">
+<center>
+    <h3>Your favoites photos</h3>
+</center>
+<div class="photo_index_images">
     <% @likes.each do |like| %>
         <% photo = Photo.find_by(id: like.photo_id) %>
-            <%= link_to public_photo_path(photo) do  %> 
-                <%= attachment_image_tag photo,:image,fallback: "noimage.jpg", style:'width: 33%;height:33%;padding:10px;' %>
-            <% end %>
+           <%= link_to public_photo_path(photo) do  %>
+                    <%= attachment_image_tag photo,:image,fallback: "noimage.jpg", style:'width: 30%;height:33%;padding:3%;' %>
+                <% end %>
     <% end %>
 </div>
