--- a/app/views/public/order_details/sold.html.erb
+++ b/app/views/public/order_details/sold.html.erb
@@ -1,4 +1,4 @@
-   <h3 >注文履歴詳細</h3>
+   <h3 >販売履歴詳細</h3>
     <div class="row">
         <div class="field">
                 <div class="col-xs-3"> 購入者</div>
@@ -27,8 +27,10 @@
             <div class="field">
                 <div class="col-xs-3"> 注文ステータス</div>
                 <div class="col-xs-7">
-                    <%= form_with(model:@order, url:public_orders_path(@order),local: true,method: :patch) do |f| %>
-                    <%= f.select :status, [["入金待ち", 0], ["入金確認", 1], ["製作中", 2], ["発送待ち", 3], ["発送済み", 4]],:selected => Order.statuses[@order.status] %>
+                    <%= "order#{@order.id}" %>
+                    <%= @order_details.pluck(:id) %>
+                    <%= form_with(model:@order, url:public_order_path(@order),local: true,method: :patch) do |f| %>
+                    <%= f.select :status, [["入金待ち", 0], ["入金確認", 1], ["発送準備中", 2], ["受領確認待ち", 3], ["取引終了", 4]],:selected => Order.statuses[@order.status] %>
                     <%= f.submit "更新",class:"btn btn-primary"%>
                     <% end %>
                 </div>
@@ -46,9 +48,9 @@
                     <td><%= order_detail.photo.price %></td>
                     <td><%= order_detail.amount %></td>
                     <td>
-                        <%= form_with(model: order_detail, url:admins_order_detail_path(order_detail),local: true,method: :patch) do |f| %>
-                        <%= f.select :shipping_status, [["着手不可", 0], ["製作待ち", 1], ["製作中", 2], ["製作完了", 3]],:selected => OrderDetail.shipping_statuses[order_detail.shipping_status]
-                         %>
+                        <%= form_with(model: order_detail, url:public_order_detail_path(order_detail),local: true,method: :patch) do |f| %>
+                        <%= f.select :shipping_status, [["未着手", 0], ["プリント開始",1], ["発送準備中", 2], ["発送済み", 3]],:selected => OrderDetail.shipping_statuses[order_detail.shipping_status]%>
+        
                         <%= f.submit "更新",class:"btn btn-primary"%>
                         <%#= f.select :making_status, options_for_select(OrderDetail.making_status.keys.map {|k| [k, k]}, selected: order_detail.making_status)%>
                         <% end %>
