--- a/app/views/public/users/top.html.erb
+++ b/app/views/public/users/top.html.erb
@@ -10,6 +10,16 @@
             <% end%>
         </div>
     </div>
+    <% elsif admin_signed_in? %>
+    <center>
+<h3>Admin Photos Index</h3>
+</center>
+<% @photos.each do |photo| %>
+        <%= link_to admins_photo_path(photo) do  %>
+            <%= attachment_image_tag photo,:image,fallback: "noimage.jpg", style:'width: 15%;height:15%;padding:10px;' %>
+        <% end %>
+    <% end %>
+</div>
 <% else %>
     <center>
         <%= link_to"let's explore photos",  new_user_registration_path ,class:"btn btn-primary",style:"margin-top:10px;"%>
