finished_hashtag_function

--- a/app/views/admins/photos/top.html.erb
+++ b/app/views/admins/photos/top.html.erb
@@ -1,5 +1,5 @@
 <center>
-<h3>Admin Photos Indexa</h3>
+<h3>TOP</h3>
 </center>
 <% @photos.each do |photo| %>
         <%= link_to admins_photo_path(photo) do  %>
