--- a/app/views/public/photos/hashtag.html.erb
+++ b/app/views/public/photos/hashtag.html.erb
@@ -2,7 +2,7 @@
 <h3>#
 <%= @hashtag.try(:hashname) || @hashname %>
 投稿
-<%= @hashtag_photos.count %>
+<%= @hashtag_photos_count %>
 件</h3>
 </center>
         <div class="index_photo_wrapper">
