--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -199,3 +199,10 @@ tr td{
         margin:10px 0 0 10px;
     }
 }
+.user_index{
+    display:flex;
+    width:100%;
+    &_box{
+        width:50%;
+    }
+}
