--- a/app/views/admins/photos/index.html.erb
+++ b/app/views/admins/photos/index.html.erb
@@ -1,5 +1,5 @@
 <center>
-<h3>Admin Photos Index</h3>
+<h3><%= @user.nickname%> のPhotos Index</h3>
 </center>
 <% @photos.each do |photo| %>
         <%= link_to admins_photo_path(photo) do  %>
