--- a/app/views/admins/photos/show.html.erb
+++ b/app/views/admins/photos/show.html.erb
@@ -25,7 +25,7 @@
     </div>
     <div class="col-xs-2">
         <div class="photo_profile">
-            <%= link_to admins_photos_path(user_id: @user.id) do %>
+            <%= link_to admins_photos_path(user_id: @user) do %>
                 <%# <%= hidden_field_tag :user_id, @user.id %>
                 <%= attachment_image_tag @user,:profile_image,fallback: "noimage.jpg", style: 'border-radius: 50%; width: 100%;height: 100%;object-fit: cover;' %>
                     <center>
