--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,7 +17,8 @@ html lang="ja"
         .jumbotron.jumbotron-extend.jumbotron-fluid.padding_margin_0 
                 .navbar.navbar-inverse.opacity.margin
                     nav.nav.navbar-nav.navbar-left
-                    = link_to "Picsel", root_path
+                    = link_to "PICSELL", root_path
+                    / = image_tag 'アートボード1.png'
                     ul.nav.navbar-nav.navbar-right
                         - if user_signed_in?
                             li[style="margin:15px 20px 0 0;color:white;"]
@@ -29,11 +30,11 @@ html lang="ja"
                             li.nav-item= link_to "カート", public_cart_items_path, class: "btn btn-light nav-link"
                             li.nav-item= link_to "ログアウト", destroy_user_session_path, class: "btn btn-light nav-link",method: :delete
                             li.nav-item[style="margin:15px 20px 0 0;"]
-                                 =search_form_for @q, url: public_hashtag_path do |f|
-                                    =f.search_field :hashname_cont, placeholder: "タグを入力して下さい"
-                                    =f.submit"検索"
+                                 = form_tag(public_hashtag_path, method: :get) do 
+                                    =text_field_tag :hashname_cont
+                                    =submit_tag"検索"
                         - elsif admin_signed_in?
-                            li= link_to "写真一覧", admins_photos_path, class: "btn btn-light"
+                            li= link_to "写真一覧", top_admins_photos_path, class: "btn btn-light"
                             li= link_to "会員一覧", admins_users_path, class: "btn btn-light"
                             li= link_to "注文履歴一覧", admins_order_index_path, class: "btn btn-light"
                             li= link_to "ログアウト", destroy_admin_session_path, class: "btn btn-light" ,method: :delete
