--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,103 +51,7 @@
     margin:0px;
     padding:0px;
 }
-.photo_wrapper{
-    padding-top:30px;
 
-}
-.profile{
-    padding:10px 80px;
-}
-.photo_profile{
-    min-height:100px
-}
-.mypage_detail{
-    height:300px;
-
-    text-align: left;
-    &__parchase{
-        height:20%;
-        background-color: #2F3751;
-        padding:10px 0 10px 10px;
-    }
-    &__favorites{
-        height:20%;
-        margin:10px 0;
-        padding:10px 0 10px 10px;
-        background-color: #2F3751;
-    }
-    &__orders_button{
-        height:50%;
-        margin-top:10px;
-        padding:10px 0 10px 10px;
-        background-color:#2F3751;
-    }
-    &__orders_info{
-    border:1px solid #2F3751;
-    height:120px;
-    }
-
-}
-.about{
-    background-color: #2F3751;
-    width: 100%;
-    height: 30px;
-    margin:0px;
-    padding:10px;
-    p{
-        display: inline-block;
-    }
-    h5{
-        color:white;
-        margin:0px;
-    }
-    i{
-        size:100px;
-    }
-}
-
-.profile_detail table {
-    height: 270px;
-    width:100%;
-    
-}
-.profile_detail i{
-    padding:10px
-}
-.profile{
-    width:100%;
-    padding:10px 80px;
-    border: thin solid #2F3751;
-}
-.profile_box{
-  
-    .profile{
-    height: 270px;
-    }
-    .col-xs-5{
-        padding-right:0;
-    }
-    .col-xs-7{
-        padding-left:0;
-    }
-}
-.index_photo{
-    display:flex;
-    &_wrapper {
-        display: flex;
-        padding-left:40%;
-        p{
-            margin:15px 0 0 10px ;
-        }
-    }
-    &_follow_form{
-        margin:15px;
-    }
-}
-
-.photo_profile{
-    margin:20px;
-}
 .recommend_item_each{
     width:100%;
 }
@@ -205,4 +109,50 @@ tr td{
     &_box{
         width:50%;
     }
+}
+.about_view{
+    text-align: center;
+    width:100%;
+    margin:20px 0;
+    &_function{
+        display:flex;
+        flex-wrap :wrap;
+        width:100%;
+        background-color: white;
+        margin:10px 0;
+        .function_box{
+            float:left;
+            width:45%;
+            height:100%;
+            margin:10px auto;
+            -webkit-box-shadow: 2px 2px 2px gray;
+            background-color: lightgrey;
+        }
+    }
+    
+    &_about_picsell{
+    background-color:white;
+    margin:10px 0;
+    }
+    &_image{
+        width:100%;
+
+    }
+  
+}
+.photo_image_each{
+    width:100%;
+    text-align: center;
+    object-fit: contain;
+    // max-height: 100px;
+}
+.like_function{
+    display: flex;
+    
+}
+.roww{
+    padding-top:120px;
+}
+.content_all_box{
+padding:20px ;
 }
