--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -57,6 +57,9 @@
             </div>
       </div>
       <br>
+     <%# form_with(model: @trading_status,url: confirm_public_orders_path, method: :get,local: true) do |f| %>
+      <%= f.hidden_field :trading_status, value:0 %>
       <%= f.submit "確認画面へ進む",class:"btn btn-primary",style:"margin-left:200px;"%>
     </div>
     <% end %>
+    <%# end %>
