--- a/app/views/public/photos/index.html.erb
+++ b/app/views/public/photos/index.html.erb
@@ -29,10 +29,10 @@
         <% end %>
     <% end %>
 </div>
-<div class="photo_index_images">
+<div class=".photo_image_each">
     <% @photos.each do |photo| %>
         <%= link_to public_photo_path(photo) do  %>
-            <%= attachment_image_tag photo,:image,fallback: "noimage.jpg", style:'width: 33%;height:33%;padding:10px;' %>
+            <%= attachment_image_tag photo,:image,fallback: "noimage.jpg", style:'width: 33%;height:33%;padding:1%;' %>
         <% end %>
     <% end %>
 </div>
