--- a/app/views/public/users/top.html.erb
+++ b/app/views/public/users/top.html.erb
@@ -2,10 +2,10 @@
 <%= breadcrumbs separator: " &rsaquo; " %>
 <% if user_signed_in? %>
     <div class="recommend_photographer">
-        <div class="recommend_item_each">
+        <div class="photo_image_each">
             <% @photos.each do |photo|%>
                 <%= link_to public_photo_path(photo) do  %>
-                    <%= attachment_image_tag photo,:image,fallback: "noimage.jpg", style:'width: 30%;height:33%;padding:3%;' %>
+                    <%= attachment_image_tag photo,:image,fallback: "noimage.jpg", style:'width: 30%;height:33%;padding:1%;' %>
                 <% end %>
             <% end%>
         </div>
@@ -24,7 +24,7 @@
     <center>
         <%= link_to"let's explore photos",  new_user_registration_path ,class:"btn btn-primary",style:"margin-top:10px;"%>
     </center>
-    <div class="recommend_item_each"> 
+    <div class="photo_image_each"> 
         <%4.times do |i|%>
             <%= link_to public_photo_path(@photos[i].id) do %>
                 <%= attachment_image_tag @photos[i],:image, fallback: "noimage.png", style:'width: 30%;height:33%;padding:3%;'%>
