--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -34,12 +34,14 @@
                                         <%= ((order_detail.photo.price*1.08) * (order_detail.amount)).round.to_s(:delimited) %>
                                     </td>
                                      <td>
-                                        <% if order_detail.shipping_status == "shipped"  %>
-                                            <%= form_with(model:@order_detail,url:public_order_detail_path(order_detail),local: true,method: :patch) do  |f| %>
-                                                <% f.hidden_field :shipping_status, value: 4%>
+                                        <% if order_detail.shipping_status == "received"  %>
+                                            <%#= order_detail.shipping_status = "done" %>
+                                            <%= form_with(model:order_detail,url:public_order_detail_path(order_detail),local: true,method: :patch) do  |f| %>
+                                                <%= f.hidden_field :shipping_status, value: "done" %>
                                                 <%= f.submit "受取完了",class:"btn btn-primary"%>
                                             <% end %>
                                         <% else %>
+                                            <%#= order_detail.shipping_status_i18n  %>
                                             <%= order_detail.shipping_status  %>
                                         <% end %>
                                     </td>
