fixed_bug_of_migration_error

--- a/app/views/public/users/top.html.erb
+++ b/app/views/public/users/top.html.erb
@@ -25,10 +25,10 @@
         <%= link_to"let's explore photos",  new_user_registration_path ,class:"btn btn-primary",style:"margin-top:10px;"%>
     </center>
     <div class="recommend_item_each"> 
-        <%4.times do |i|%>
-            <%= link_to public_photo_path(@photos[i].id) do %>
-                <%= attachment_image_tag @photos[i],:image, fallback: "noimage.png", style:'width: 30%;height:33%;padding:3%;'%>
-            <% end %>
-        <%end %>
+        <%#4.times do |i|%>
+            <%#= link_to public_photo_path(@photos[i].id) do %>
+                <%#= attachment_image_tag @photos[i],:image, fallback: "noimage.png", style:'width: 30%;height:33%;padding:3%;'%>
+            <%# end %>
+        <%#end %>
     </div> 
 <% end %>
