change_image_file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
     height: 30vh;
     min-height: 100px;
     margin-bottom: 60px;
-    background: image-url(20170623_1814.jpg) no-repeat center center;
+    background: image-url("20170623_1814.jpg") no-repeat center center;
     background-size: cover;
 }
 .jumbotron-container {
