--- a/app/views/public/photos/new.html.erb
+++ b/app/views/public/photos/new.html.erb
@@ -12,14 +12,14 @@
                 <p>ハッシュタグ入力欄</p>
                   <%= f.text_area :hashbody, size:"55x3" %>
                 <br>
-                <h4>ギャラリー名</h4> 
-                    <%= f.collection_select(:gallary_id, @gallaries, :id, :name ,prompt: "選択してください") %>
+                <!--h4>ギャラリー名</h4--> 
+                    <%#= f.collection_select(:gallary_id, @gallaries, :id, :name ,prompt: "選択してください") %>
                 <h4>税抜価格</h4>
                     <%= f.text_field :price %>
-                <h4>販売ステータス</h4>
-                    <%= f.select :is_active, ['有効', '無効'], {include_blank: 'ーー選択してくださいーー'}, class: 'sample' %>
-                <h4>タグ名</h4>
-                 <%= f.text_field :tag_name %>
+                <!--h4>販売ステータス</h4-->
+                    <%#= f.select :is_active, ['有効', '無効'], {include_blank: 'ーー選択してくださいーー'}, class: 'sample' %>
+                <!--h4>タグ名</h4-->
+                 <%#= f.text_field :tag_name %>
               <br>
               <%= f.submit"新規登録",class:"btn btn-primary",style:"float:right;"%>
          </div>
